--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,26 @@
-.main-content-wrapper {margin-left: 45px; margin-right: 45px; padding: 0px;}
+.main-content-wrapper {background-color: rgba(244,244,245,1); padding-top: 10px}
+.main-content-second-wrapper {margin-left: 45px; margin-right: 45px; padding-top: 5px; background-color: white}
 
 
-.header-wrapper {background-color: darkgray;}
+.header-wrapper {background-color: rgb(255,255,255); height: 40px;}
+.header-wrapper .header-nav-item {margin-right: 20px; font-size: 16px; font-weight: 1500;}
 
-.left-navbar-container {background-color: aquamarine;}
 
 
-.footer-wrapper {background-color: antiquewhite;}
+.footer-wrapper {background-color: rgb(177, 161, 140);}
+
+
+
+
+
+
+
+
+
+
+
+/* 공통 css? */
+
+.inline-block {display: inline-block;}
+.text-left {text-align: left;}
+.justify-center {justify-content: center;}
