--- a/src/jaduguaza/Mine.scss
+++ b/src/jaduguaza/Mine.scss
@@ -10,6 +10,18 @@
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   background-color: #F0F0F0;
+
+  // display: flex;
+  // flex-direction: row;
+
+  .horror-nav-upper{
+    width: inherit;
+    height: 45vh;
+  }
+  .horror-nav-below{
+    width: inherit;
+    height: 55vh;
+  }
 }
 
 .horror-header{
