--- a/src/jaduguaza/Mine.scss
+++ b/src/jaduguaza/Mine.scss
@@ -25,6 +25,8 @@
       padding: 10vh 0 0 72px;
       h1{
         display: block;
+        margin-top: 0;
+        margin-bottom: 0;
         font-family: RingsideExtraWide-Book,Blank,Helvetica Neue,Helvetica,sans-serif;
         text-transform: uppercase;
         font-size: 5rem;
@@ -45,8 +47,22 @@
     padding: 72px;
 
     .below-container{
-      background-color: blue;
       height: 100%;
+      margin: 0;
+      padding: 0;
+
+      color:$MAIN_COLOR;
+    }
+
+    .p:nth-child(1){
+      font-size: 1.6em;
+      line-height: 1.2;
+      margin-bottom: 1em;
+    }
+
+    .p:nth-child(2){
+      text-align: justify;
+      text-indent: -0.5em;
     }
   }
 }
