--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,56 @@
+@import "./scss/varilable";
+
+*{
+  box-sizing: border-box;
+}
+
+html, body, #root, .App, .top-container {
+  height: 100%;
+  // padding: 0px 0px 120px;
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
 
 .top-container{
-  display: grid;
-  grid-template-columns: minmax(max-content, 250px) 4fr;
-  grid-template-rows: 100vh;
-}
-.nav-wrapper {
-  background-color: rgb(78, 19, 214);
-  padding-left: 15px;
+  width: 100%;
+  height: 100%;
 }
 
+.header{
+  position: fixed;
+  height: $HEADER_HEIGHT;
+  width: 100%;
 
-.flex-container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  // align-items:;
-
-
-  .nav-flex-child{
-    .nav-flex-child-link{
-      color: white;
-      text-decoration: none;
-    }
-  }
+  
+  z-index: 100;
+  background-color: black;
 }
 
+.nav{
+  position: fixed;
+  padding-top: $HEADER_HEIGHT;
+  width: $NAV_WIDTH;
+  height: calc(100% - 64px);
 
+
+  z-index: 20;
+
+  background-color: cadetblue;
+  
+}
+
+main{
+  width: 100%;
+  height: 100%;
+  min-width: 320px;
+  margin-left: $NAV_WIDTH;
+  // margin-top: $HEADER_HEIGHT;
+}
 
 
 
