--- a/src/App.scss
+++ b/src/App.scss
@@ -18,12 +18,16 @@ html, body{
 }
 
 .top-container{
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: calc(1356px);
   width: 100%;
   height: 100%;
 }
 
 .header{
   position: fixed;
+  margin: 0 auto;
   height: $HEADER_HEIGHT;
   width: 100%;
 
@@ -49,8 +53,8 @@ main{
   width: 100%;
   height: 100%;
   min-width: 320px;
-  margin-left: $NAV_WIDTH;
-  // margin-top: $HEADER_HEIGHT;
+  padding-left: $NAV_WIDTH;
+  padding-top: $HEADER_HEIGHT;
 }
 
 
