--- a/src/App.scss
+++ b/src/App.scss
@@ -18,19 +18,17 @@ html, body{
 }
 
 .top-container{
-  margin: 0 auto;
-  min-width: 320px;
-  max-width: calc(1356px);
+  // margin: 0 auto;
   width: 100%;
   height: 100%;
 }
 
 .header{
   position: fixed;
-  margin: 0 auto;
+  // margin: 0 auto;
   height: $HEADER_HEIGHT;
-  width: 100%;
 
+  width: 100%;
 
   z-index: 100;
   background-color: black;
@@ -52,7 +50,7 @@ html, body{
 main{
   width: 100%;
   height: 100%;
-  min-width: 320px;
+
   padding-left: $NAV_WIDTH;
   padding-top: $HEADER_HEIGHT;
 }
