--- a/src/jaduguaza/Clone2.scss
+++ b/src/jaduguaza/Clone2.scss
@@ -21,6 +21,7 @@ $text_bg: #F3EDE8;
       .content-box{
         width: 100%;
         height: 150px;
+        display: flex;
 
         padding-top: 40px;
         padding-bottom: 40px;
