padding-top이 무엇일까??

--- a/src/jaduguaza/Clone2.scss
+++ b/src/jaduguaza/Clone2.scss
@@ -29,6 +29,11 @@ $text_bg: #F3EDE8;
 
         .left-half{
           width: 50%;
+
+          .img{
+            width:100%;
+            padding-top: 100%;
+          }
         }
 
 
