구글 로그인 붙여보기

--- a/src/components/layout/NavBar.scss
+++ b/src/components/layout/NavBar.scss
@@ -1,5 +1,9 @@
 .user-info{
   height: 100px;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .user-name{
     color: white;
     font-weight: bold;
