--- a/src/jaduguaza/GuestBook.scss
+++ b/src/jaduguaza/GuestBook.scss
@@ -1,14 +1,39 @@
+input[type=checkbox]{
+  border: solid 1px black;
+  width: 10px;
+  height: 10px;
+}
+
 .guset-book{
   width: 100%;
   height: 100%;
-  padding: 0px 60px 0px 60px;
+  padding: 0px 360px 0px 60px;
 
   .title-wrapper{
     height: 100px;
     border-top: solid 1px black;
     border-bottom: solid 1px black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: palevioletred;
+    font-weight: bold;
+    font-size: 50px;
   }
   .editor-wrapper{
+    height: 360px;
+    background-color: beige;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    .user-info-wrapper{
+      height: 50px;
+      margin-top: 5px;
+      margin-bottom: 5px;
+
+    }
 
   }
   .board-wrapper{
