--- a/src/reset.scss
+++ b/src/reset.scss
@@ -43,9 +43,9 @@ table{
 input{
   // -webkit-appearance: none;
   border-radius: 0;
-  border-top-style: hidden;
-  border-right-style: hidden;
-  border-left-style: hidden;
-  border-bottom-style: groove;
+  border-top-style: none;
+  border-right-style: none;
+  border-left-style: none;
+  border-bottom-style:none;
   // background-color: none;
 }
