미사용 코드 주석 처리

--- a/src/jaduguaza/GuestBook.scss
+++ b/src/jaduguaza/GuestBook.scss
@@ -122,10 +122,10 @@ input[type=checkbox]{
     }
 
   }
-  .board-wrapper{
+  // .board-wrapper{
 
-  }
-  .pagination-wrapper{
+  // }
+  // .pagination-wrapper{
 
-  }
+  // }
 }
