--- a/src/jaduguaza/GuestBook.scss
+++ b/src/jaduguaza/GuestBook.scss
@@ -14,6 +14,8 @@ input[type=checkbox]{
     border-top: solid 1px black;
     border-bottom: solid 1px black;
 
+    margin-top: 5px;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,13 +25,11 @@ input[type=checkbox]{
     font-size: 50px;
   }
   .editor-wrapper{
-    height: 360px;
-    background-color: beige;
     padding-top: 30px;
     padding-bottom: 30px;
 
     .user-info-wrapper{
-      height: 50px;
+      height: 60px;
       margin-top: 5px;
       margin-bottom: 5px;
 
@@ -39,6 +39,7 @@ input[type=checkbox]{
       .user-name-wrapper{
         width: 50%;
         height: 100%;
+        margin-left: 30px;
         // background-color: rebeccapurple;
         display: flex;
         border-collapse:collapse;
@@ -51,26 +52,30 @@ input[type=checkbox]{
           height: 100%;
           width: 40px;
 
-          border: solid 1px black;
+          border: solid 1px rgb(150, 147, 147);
 
           border-top-left-radius: 8px;
           border-bottom-left-radius: 8px;
 
           background-image: url('../img/person-icon.png');
-          background-size: contain;
+          background-size: 80%;
           background-repeat: no-repeat;
-          background-color: white;
           background-position: center;
 
         }
         .user-name-input-wrapper{
           height: 100%;
-          border: solid 1px black;
+          width: 60%;
+          min-width: 30%;
+          border: solid 1px rgb(150, 147, 147);
           border-radius: 0 8px 8px 0;
           border-left: 0;
           input{
             height: 100%;
+            width: 100%;
             outline: none;
+
+            padding: 10px 7px;
 
             border-radius: 0 8px 8px 0;
           }
@@ -93,30 +98,55 @@ input[type=checkbox]{
           height: 100%;
           width: 40px;
 
-          border: solid 1px black;
+          border: solid 1px rgb(150, 147, 147);
 
           border-top-left-radius: 8px;
           border-bottom-left-radius: 8px;
 
           background-image: url('../img/key_icon.png');
-          background-size: contain;
+          background-size: 80%;
           background-repeat: no-repeat;
-          background-color: white;
           background-position: center;
         }
 
         .user-password-input-wrapper{
           height: 100%;
-          border: solid 1px black;
+          width: 60%;
+          min-width: 30%;
+          border: solid 1px rgb(150, 147, 147);
           border-radius: 0 8px 8px 0;
           border-left: 0;
           input{
+            width: 100%;
             height: 100%;
             outline: none;
+
+            padding: 10px 7px;
 
             border-radius: 0 8px 8px 0;
           }
         }
+      }
+
+    }
+
+    .board-input-wrapper{
+      height: 300px;
+
+      padding: 20px;
+
+      text-align: right;
+
+      textarea{
+
+        width: 100%;
+        height: 80%;
+        resize: none;
+      }
+
+      button{
+        margin-top: 10px;
+        height: 30px;
       }
 
     }
