모바일 반응형 메뉴 작업!!

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,7 +62,15 @@ main{
 }
 
 @media (max-width: 991px) {
+  main{
+    padding-left: 0;
+  }
+
   .nav{
+    display: none;
+  }
+
+  .nav.on{
     display: block;
     width: 100%;
     height: auto;
