스르륵 모바일 메뉴

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,15 +67,20 @@ main{
   }
 
   .nav{
-    display: none;
+    opacity: 0;
+    z-index: -1;
+    top: -100px;
   }
 
   .nav.on{
-    display: block;
+    opacity: 1;
+    z-index: 1;
     width: 100%;
     height: auto;
+    top: 0;
     padding-top: $HEADER_HEIGHT;
     box-sizing: border-box;
+    transition: top 0.5s;
 
     .nav-flex-child{
       align-items: center;
