--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 
 html, body, #root, .App, .top-container {
   height: 100%;
+  background: #1c1e22;
   // padding: 0px 0px 120px;
 }
 
@@ -65,6 +66,7 @@ html, body{
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 
 }
 
@@ -76,6 +78,12 @@ html, body{
   }
 }
 
+.center-wrapper.chat-container{
+
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+}
 
 
 main{
