--- a/src/css/Chatbox.css
+++ b/src/css/Chatbox.css
@@ -1,18 +1,16 @@
 html,
 .chatbox-container {
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: #1c1e22;
 }
-.chatbox-container {
+/* .chatbox-container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
     flex-direction: column;
-}
+} */
 .chatbox-room{
 
 }
