--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ html, body, #root, .App, .top-container {
   // padding: 0px 0px 120px;
 }
 
+
 html, body{
   width: 100%;
   height: 100%;
@@ -35,9 +36,24 @@ html, body{
   z-index: 100;
   background-color: black;
 
-  .hamburgur{
-    display: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+
+  .header-pc{
+    height: $HEADER_HEIGHT;
+    display: block;
   }
+  
+  .header-moblie{
+    height: $HEADER_HEIGHT;
+    display: none;
+
+    img{
+      max-height: $HEADER_HEIGHT - 20px;
+    }
+  }
+
 }
 
 .nav{
@@ -113,7 +129,11 @@ main{
   }
 
   .header {
-    .hamburgur {
+    .header-pc{
+      display: none;
+    }
+  
+    .header-moblie{
       display: block;
     }
   }
