--- a/src/scss/_varilable.scss
+++ b/src/scss/_varilable.scss
@@ -1,3 +1,12 @@
-$MAIN_COLOR: #e7473c;
-$HEADER_HEIGHT: 80px;
-$NAV_WIDTH: 240px
+$MAIN_COLOR: #433d80;
+// $HEADER_HEIGHT: 80px;
+$NAV_WIDTH: 240px;
+
+// renewal variable
+
+
+//메인 태그 양옆에 줄 패딩값
+$HEADER_HEIGHT: 50px;
+$HEADER_BACKGROUND: #433d80;
+
+$MAIN_PADDING: 50px;
