오버레이 만들기

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -18,3 +18,12 @@ main {
 }
 
 
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $OVERLAY_BACKGROUND;
+}
