--- a/src/scss/_varilable.scss
+++ b/src/scss/_varilable.scss
@@ -10,3 +10,12 @@ $HEADER_HEIGHT: 50px;
 $HEADER_BACKGROUND: #433d80;
 
 $MAIN_PADDING: 50px;
+
+
+
+
+
+
+
+/////////////overlay
+$OVERLAY_BACKGROUND: #d8c0cc;
