--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -10,8 +10,6 @@ header {
   background-color: $HEADER_BACKGROUND;
 }
 
-
-
 main {
   padding-left: $MAIN_PADDING;
   padding-right: $MAIN_PADDING;
@@ -26,4 +24,12 @@ main {
   width: 100%;
   height: 100%;
   background-color: $OVERLAY_BACKGROUND;
+  opacity: 1;
+
+  transition: opacity 1s linear;
+}
+
+
+.overlay.fadeout{
+  opacity: 0;
 }
