--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -8,7 +8,7 @@
   background-size: 4px 3px;
   border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
   border-style: solid;
-  border-width: 2px;
+  border-width: $width;
   box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
   box-sizing: border-box;
   color: #41403e;
@@ -16,7 +16,7 @@
   display: inline-block;
   font-family: Neucha, sans-serif;
   font-size: 1rem;
-  line-height: 23px;
+  line-height: $line-height;
   outline: none;
   padding: .75rem;
   text-decoration: none;
