--- a/src/scss/button/button55.module.scss
+++ b/src/scss/button/button55.module.scss
@@ -1,4 +1,5 @@
 @import "../mixins";
+@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
 
 
-.login-button {@include button-5}
+.loginbutton {@include button-55($line-height: 15px)}
