--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -2,6 +2,17 @@
 @import "./varilable";
 @import "./mixins";
 
+@font-face { /* 애플산돌고딕 폰트 적용 */
+  font-family: "BinggraeSamanco";
+  src: url("../font/BinggraeSamanco.ttf") format("truetype");
+  font-weight: normal;
+}
+
+* {
+
+  font-family: BinggraeSamanco, serif;
+}
+
 html {
   height: 100%;
 }
