--- a/src/assets/scss/_varilable.scss
+++ b/src/assets/scss/_varilable.scss
@@ -5,14 +5,17 @@ $NAV_WIDTH: 240px;
 // renewal variable
 
 
-//메인 태그 양옆에 줄 패딩값
-$HEADER_HEIGHT: 50px;
+$HEADER_HEIGHT: 72px;
 $HEADER_BACKGROUND: #433d80;
 
-$MAIN_PADDING: 50px;
+$HEADER_LOGIN_WIDTH: 70px;
+$HEADER_PADDING: 25px;
 
 
 
+
+
+$MAIN_PADDING: 70px;
 
 
 
