--- a/src/assets/scss/components/NamePlate.module.scss
+++ b/src/assets/scss/components/NamePlate.module.scss
@@ -1,30 +1,20 @@
-@import '../varilable';
-
-@font-face {
-
-  font-family: "BinggraeSamanco";
-
-  src: url('../../font/BinggraeSamanco.ttf') format('truetype');
-
-  font-weight: normal;
-
-  font-style: 45px;
-
-}
-
 .plate-container{
-  background-image: url('../../img/NameFlower4.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
+  // background-image: url('../../img/NameFlower4.svg');
+  // background-size: contain;
+  // background-repeat: no-repeat;
 
-  position: relative;
 
   width: 100%;
   height: 100%;
+  padding: 10px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .plate-content {
 
-  font-family: BinggraeSamanco;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
