썸네일 영역 수정 + 개인 팝업 틀

--- a/src/assets/scss/_varilable.scss
+++ b/src/assets/scss/_varilable.scss
@@ -19,6 +19,15 @@ $MAIN_PADDING: 70px;
 
 
 
+//account seeting popup 관련 변수
+
+// $SETTING_WIDTH:
+
+
 
 /////////////overlay
 $OVERLAY_BACKGROUND: #d8c0cc;
+
+
+
+
