--- a/src/assets/scss/components/NamePlate.module.scss
+++ b/src/assets/scss/components/NamePlate.module.scss
@@ -1,12 +1,10 @@
 .plate-container{
-  // background-image: url('../../img/NameFlower4.svg');
-  // background-size: contain;
-  // background-repeat: no-repeat;
-
 
   width: 100%;
   height: 100%;
   padding: 10px;
+
+  position: relative;
 
   .plate-content {
 
@@ -14,7 +12,15 @@
     height: 100%;
     border-radius: 50%;
 
+    cursor: pointer;
+
     background-repeat: no-repeat;
     background-size: cover;
+    border: 2px solid #fff;
+
+    &:hover {
+      border: 2px solid rgb(218, 232, 245);
+    }
   }
+
 }
