개인 설정 팝업 만들기 스타일 작업

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -38,6 +38,7 @@ header {
 }
 
 main {
+  height: 100vh;
   padding: 0 $MAIN_PADDING;
   // padding-left: $MAIN_PADDING;
   // padding-right: $MAIN_PADDING;
