--- a/src/assets/scss/components/AccountSettingPopup.module.scss
+++ b/src/assets/scss/components/AccountSettingPopup.module.scss
@@ -4,11 +4,17 @@
 .container {
   position: fixed;
 
+  right: $SETTING_RIGHT;
+  top: $HEADER_HEIGHT + 10px;
 
-  background-color: royalblue;
 
-  left: 200px;
-  right: 200px;
-  width: 300px;
-  height: 300px;
+  width: $SETTING_POPUP_WIDTH;
+  min-height: $SETTING_POPUP_MIN_HEIGHT;
+
+
+  background-color: #fff;
+
+  border: none;
+  border-radius: 28px;
+  box-shadow: 0 4px 8px 3px rgba(0,0,0,.15), 0 1px 3px rgba(0,0,0,.3);
 }
