--- a/src/assets/scss/_varilable.scss
+++ b/src/assets/scss/_varilable.scss
@@ -12,6 +12,10 @@ $HEADER_LOGIN_WIDTH: 70px;
 $HEADER_PADDING: 25px;
 
 
+//NamePlate
+
+$NAME_PLATE_PADDING: 10px;
+
 
 
 
@@ -23,7 +27,7 @@ $MAIN_PADDING: 70px;
 
 $SETTING_POPUP_WIDTH: 300px;
 $SETTING_POPUP_MIN_HEIGHT: 200px;
-$SETTING_RIGHT: calc( #{$HEADER_PADDING} + #{$HEADER_LOGIN_WIDTH / 2} );
+$SETTING_RIGHT: calc( #{$HEADER_PADDING} + #{$NAME_PLATE_PADDING} );
 
 
 
