--- a/src/assets/scss/components/NamePlate.module.scss
+++ b/src/assets/scss/components/NamePlate.module.scss
@@ -1,8 +1,10 @@
+@import '../varilable';
+
 .plate-container{
 
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: $NAME_PLATE_PADDING;
 
   position: relative;
 
