--- a/src/assets/scss/_varilable.scss
+++ b/src/assets/scss/_varilable.scss
@@ -25,9 +25,11 @@ $MAIN_PADDING: 70px;
 
 //account seeting popup 관련 변수
 
-$SETTING_POPUP_WIDTH: 300px;
+$SETTING_POPUP_WIDTH: 200px;
 $SETTING_POPUP_MIN_HEIGHT: 200px;
 $SETTING_RIGHT: calc( #{$HEADER_PADDING} + #{$NAME_PLATE_PADDING} );
+
+$SETTING_POPUP_CONTAINER_BACKGROUND_COLOR: #dff2e4;
 
 
 
