--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -19,11 +19,15 @@ html {
 }
 
 header {
+  width: 100%;
   height: $HEADER_HEIGHT;
-  // background-color: $HEADER_BACKGROUND;
+  position: fixed;
+  top: 0;
   box-shadow: 0 2px 5px rgba(0,0,0,.1);
   display: flex;
   padding: 0 $HEADER_PADDING;
+  z-index: 9;
+  background-color: #fff;
   // padding-left: $MAIN_PADDING;
   // padding-right: $MAIN_PADDING;
 
@@ -39,6 +43,7 @@ header {
 
 main {
   height: 100vh;
+  margin-top: $HEADER_HEIGHT;
   padding: 0 $MAIN_PADDING;
   // padding-left: $MAIN_PADDING;
   // padding-right: $MAIN_PADDING;
