--- a/src/assets/scss/components/ChatBox.scss
+++ b/src/assets/scss/components/ChatBox.scss
@@ -1,3 +1,5 @@
+@import '../mixins';
+
 // Variables
 $primary: rgba(23, 190, 187, 1);
 $secondary: rgba(240, 166, 202, 1);
@@ -6,10 +8,12 @@ $active: rgba(23, 190, 187, 0.8);
 $busy: rgba(252, 100, 113, 0.8);
 $away: rgba(255, 253, 130, 0.8);
 
+@include NanumGothic('../font/Google_NanumGothic/NanumGothic-Regular.ttf');
+
 * {
   margin: 0; padding: 0;
   box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
+
 }
 
 html,body {
@@ -18,6 +22,7 @@ html,body {
 }
 
 .container {
+  font-family: 'Nanum Gothic', sans-serif;
   display: flex;
 
   background: linear-gradient(120deg, $primary, $secondary);
@@ -62,6 +67,9 @@ html,body {
     border-radius: 5px;
     margin: 1.2em 1em;
     overflow: auto;
+
+    font-family: inherit;
+
     & > p.name {
       color: #FFF;
       font-size: 1em;
@@ -111,6 +119,7 @@ html,body {
     }
   }
   p {
+    font-family: 'Nanum Gothic', sans-serif;
     float: left;
     text-align: left;
     margin: -0.25em 2em;
