--- a/src/assets/scss/components/ChatBox.scss
+++ b/src/assets/scss/components/ChatBox.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../varilable';
 
 // Variables
 $primary: rgba(23, 190, 187, 1);
@@ -42,7 +43,8 @@ html,body {
 
 .chatbox {
   background: rgba(255, 255, 255, 0.05);
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   height: 75%;
   border-radius: 0.2em;
   position: relative;
@@ -51,7 +53,7 @@ html,body {
     height: 100%;
   }
   &__messages__user-message {
-    width: 450px;
+    width: 75%;
     height: calc(100% - 42px);
     overflow: auto;
     &::-webkit-scrollbar {
@@ -144,6 +146,16 @@ html,body {
       font-size: 20px;
     }
   }
+
+  .mobile-iocn {
+    display: none;
+    position: absolute;
+    font-size: 30px;
+    right: 10px;
+    top: -40px;
+    color: white;
+    cursor: pointer;
+  }
 }
 
 // Placeholder Styling
@@ -161,4 +173,37 @@ html,body {
 
 :-ms-input-placeholder {
    color: rgba(255, 255, 255, 0.9);
+}
+
+@media (max-width: 576px) {
+  .container{
+    height: calc(100% - #{$HEADER_HEIGHT});
+    padding-top: 50px;
+  }
+
+  .chatbox {
+    height: 100%;
+    &__messages__user-message {
+      width: 100%;
+      height: calc(100% - 50px);
+      overflow: auto;
+      &::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Opera*/
+      }
+    }
+
+    &__user-list {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 200px;
+      background: linear-gradient(120deg, #f0a6ca, #17bebb);
+      box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.1);
+
+    }
+
+    .mobile-iocn{
+      display: block;
+    }
+  }
 }
