헤더 + 개인 설정 팝업 mobile 패딩 적용

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -42,6 +42,12 @@ header {
   }
 }
 
+@media (max-width: 576px) {
+  header {
+    padding: 0;
+  }
+}
+
 main {
   height: calc(100vh - #{$HEADER_HEIGHT});
   margin-top: $HEADER_HEIGHT;
