디바이스 대응 바텀 패딩 css를 상위 css로 옮기기

--- a/src/assets/scss/_varilable.scss
+++ b/src/assets/scss/_varilable.scss
@@ -21,7 +21,8 @@ $NAME_PLATE_PADDING: 10px;
 
 $MAIN_PADDING: 70px;
 
-
+// moblie device 하단 버튼대응 패딩
+$DEVICE_BOTTOM_PADDING: 50px;
 
 //account seeting popup 관련 변수
 
