--- a/src/assets/scss/components/ChatBox.scss
+++ b/src/assets/scss/components/ChatBox.scss
@@ -179,7 +179,7 @@ html,body {
   .container{
     height: 100%;
     padding-top: 50px;
-    padding-bottom: 50px;
+    // padding-bottom: 50px;
   }
 
   .chatbox {
