챗 박스 가로로 스크롤 안 생기게

--- a/src/assets/scss/components/ChatBox.scss
+++ b/src/assets/scss/components/ChatBox.scss
@@ -68,7 +68,8 @@ html,body {
     width: 65%;
     border-radius: 5px;
     margin: 1.2em 1em;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     font-family: inherit;
 
